Actualización CSS, HTML e imágenes optimizadas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
         <div id="intro">  
             <h2>Breve historia</h2>
-                <p>En el Barrio Gótico, concretamente en los alrededores de la Plaza Sant Jaume, se asentó la colonia romana de Barcino. Fundada entre el año 15 y 10 a.C., en pocos siglos se convirtió en un foco económico y comercial, ejerciendo una gran influencia en toda la región y el Mediterráneo.<br/> 
+                <p>En el Barrio Gótico, concretamente en los alrededores de la Plaza Sant Jaume, se asentó la colonia romana de Barcino. <strong>Fundada entre el año 15 y 10 <acronym title="antes de Cristo">a.C.</acronym></strong>, en pocos siglos se convirtió en un foco económico y comercial, <em>ejerciendo una gran influencia en toda la región y el Mediterráneo.</em><br/> 
                 De hecho, en la céntrica Plaza Real del Barrio Gótico, se encuentran los restos del Templo de Augusto, un templo romano dedicado al emperador. El trazado del barrio permaneció prácticamente intacto hasta el siglo XIX, cuando se derribaron las murallas.</p>
                 
                 <div>
@@ -33,13 +33,13 @@
                     <li>
                         <h3>El Barrio Gótico, no es gótico</h3>
                         <ul>
-                            <li>La primera de todas, ya te la hemos contado. El resultado del Barrio Gótico se debe a una una “medievalización” artificial que se realizó entre el s. XX.</li>
+                            <li>La primera de todas, ya te la hemos contado. El resultado del Barrio Gótico se debe a una una “medievalización” artificial que se realizó entre el <abbr title="Siglo">s.</abbr>XX.</li>
                         </ul>
                     </li>
                     <li>
                         <h3>La fachada de la Catedral de Barcelona no es lo que pensábamos</h3>
                         <ul>
-                            <li>La Catedral de Barcelona fue construida entre el s.XIII y el s.XV ¡Sí, cierto! Pero no fue hasta 1913 que se construyó su famosa fachada “gótica”.</li>
+                            <li>La Catedral de Barcelona fue construida entre el <abbr title="Siglo">S.</abbr>XIII y el <abbr title="Siglo">S.</abbr>XV Pero no fue hasta 1913 que se construyó su famosa fachada “gótica”.</li>
                         </ul>
                     </li> 
                     <li>
