--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
         <div id="fuentes">
             <h2>Fuentes</h2>
                 <ul>
-                    <li><a href="https://barcelonando.com/es/barrio-gotico">https://barcelonando.com/es/barrio-gotico</a></li>
-                    <li><a href="https://www.hundredrooms.com/inspiracion/lugares-para-visitar/barrio-gotico-de-barcelona-lo-que-no-todo-el-mundo-sabe/">https://www.hundredrooms.com/inspiracion/lugares-para-visitar/barrio-gotico-de-barcelona-lo-que-no-todo-el-mundo-sabe/</a></li>
-                    <li><a href="https://www.lugaris.com/secretos-del-barrio-gotico-barcelona/">https://www.lugaris.com/secretos-del-barrio-gotico-barcelona/</a></li>
+                    <li><a href="https://barcelonando.com/es/barrio-gotico">Barcelonando</a></li>
+                    <li><a href="https://www.hundredrooms.com/inspiracion/lugares-para-visitar/barrio-gotico-de-barcelona-lo-que-no-todo-el-mundo-sabe/">Hundredrooms</a></li>
+                    <li><a href="https://www.lugaris.com/secretos-del-barrio-gotico-barcelona/">Lugaris</a></li>
                 </ul>
         </div>    
         
         <div id="footer">
+            <h2>Autor</h2>
             <ul>
                 <li>Ludmila Belén Alonso</li>
                 <li>28/04/1987</li>
